# robocomp-people-detection

components/ARIANavigationComp/: CMakeCache.txt  CMakeLists.txt  DoxyFile  Makefile  README.md.new  ariaNavigation.cdsl  cmake_install.cmake
components/ARIANavigationComp/etc/: config  config.new  config~
components/ARIANavigationComp/src/: AriaMapInformation.cpp  AriaNavigation.cpp  CMakeLists.txt  CMakeListsSpecific.txt  Makefile  arianavigationI.cpp  arianavigationI.h  cmake_install.cmake  (+19 more)
components/agentDP/: CMakeCache.txt  CMakeLists.txt  DoxyFile  Makefile  README.md  README.md.new  agentDP.cdslR  agentDP.cdsl~R  cmake_install.cmake
components/agentNavigation/: CMakeCache.txt  CMakeLists.txt  DoxyFile  Makefile  README.md  agentNavigation.cdsl  cmake_install.cmake  new.xml  old.xml
components/agentVelodyne/: CMakeCache.txt  CMakeLists.txt  DoxyFile  Makefile  README.md  agentVelodyne.cdsl  agentVelodyne.cdsl~  cmake_install.cmake  new.xml  old.xml
components/detectPersonComp/: CMakeCache.txt  CMakeLists.txt  DoxyFile  Makefile  README.md  cmake_install.cmake  detectPerson.cdsl  detectPerson.cdsl~  log
components/detectPersonComp/src/: CMakeLists.txt  CMakeLists.txt~  CMakeListsSpecific.txt  CMakeListsSpecific.txt~  Makefile  PeopleDetection.cpp  PeoplePCApp.cpp~  cmake_install.cmake  config.h  genericworker.cpp  genericworker.h  main.cpp  moc_commonbehaviorI.cxx_parameters  moc_genericmonitor.cxx_parameters  moc_genericworker.cxx_parameters  moc_specificmonitor.cxx_parameters  moc_specificworker.cxx  moc_specificworker.cxx_parameters  specificworker.cpp  specificworker.cpp~  specificworker.h  specificworker.h~
components/velodyneDataManagerComp/: CMakeCache.txt  CMakeLists.txt  DoxyFile  Makefile  README.md.new  cmake_install.cmake  velodyneDataManager.cdsl  velodyneDataManager.cdsl~
files/: agentDP.conf  agentDP.conf~  agentNavigation.conf  agentNavigation.conf~  agentVelodyne.conf  agentVelodyne.conf~  ariaNavigation.conf  ariaNavigation.conf~  deployment.xml  detecPerson.conf~  domain.aggl  domain.aggl~  executive.conf  executive.conf~  icebox.conf  initialModel.aggt  initialModel.aggt~  initialModel.xml  mission.conf  mission.conf~  targetModel.aggt  targetModel.aggt~  targetModel.xml  targetModel.xml~  velodyneDataManager.conf  velodyneDataManager.conf~
(+130 files in other folders)
